Added light screen, new settings, new buttons, bug fixes

--- a/app/src/main/res/layout/activity_ethonyte.xml
+++ b/app/src/main/res/layout/activity_ethonyte.xml
@@ -4,10 +4,9 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    android:fitsSystemWindows="true">
+    android:fitsSystemWindows="false">
 
     <include layout="@layout/toolbar"/>
-
 
     <android.support.design.widget.TabLayout
         android:id="@+id/sliding_tabs"
