--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -2,7 +2,11 @@
 <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/toolbar"
-    app:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+    app:theme="@style/ToolBarStyle"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:minHeight="?attr/actionBarSize" />
+    android:fitsSystemWindows="false"
+    android:layout_marginTop="0dp"
+    android:paddingTop="20dp"
+    android:minHeight="?attr/actionBarSize"
+     />
