--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,18 +7,31 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
-        <item name="android:textColorPrimary">@android:color/white</item>
+        <item name="android:textColorPrimary">#3b3b3b</item>
         <item name="preferenceTheme">
-            @style/PreferenceThemeOverlay.v14.Material
+            @style/PreferenceStyle
         </item>
+    </style>
+
+    <style name="PreferenceStyle" parent="@style/PreferenceThemeOverlay.v14.Material">
+        <item name="preferenceCategoryStyle">@style/CustomPreferenceCategory</item>
+        <item name="android:textColor">#3b3b3b</item>
+    </style>
+
+    <style name="CustomPreferenceCategory" parent="@style/Preference.Category">
+        <item name="android:layout">@layout/custom_preference_category</item>
+    </style>
+
+    <style name="ToolBarStyle" parent="ThemeOverlay.AppCompat.ActionBar">
+        <item name="android:textColorPrimary">@android:color/white</item>
+        <item name="android:textColorSecondary">@android:color/white</item>
+        <item name="actionMenuTextColor">@android:color/white</item>
     </style>
 
     <style name="AppAlertDialog"
         parent="Theme.AppCompat.DayNight.Dialog.Alert">
         <item name="colorAccent">@color/colorAccent</item>
     </style>
-
-    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
@@ -30,6 +43,16 @@
     <style name="DriveButtonDown" parent="Theme.AppCompat.Light">
         <item name="colorControlHighlight">#FF5722</item>
         <item name="colorButtonNormal">#FF8A65</item>
+    </style>
+
+    <style name="TopBottomButton" parent="Theme.AppCompat.Light">
+        <item name="colorControlHighlight">#2979FF</item>
+        <item name="colorButtonNormal">#4ca9f3</item>
+    </style>
+
+    <style name="ServoButton" parent="Theme.AppCompat.Light">
+        <item name="colorControlHighlight">#FF5722</item>
+        <item name="colorButtonNormal">#ff9c7d</item>
     </style>
 
     <style name="AppTheme" parent="AppBaseTheme" />
